--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/abinashdtt45/nasha_riha#readme",
   "dependencies": {
+    "alert-node": "^3.0.9",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.4",
+    "shortid": "^2.2.15"
   }
 }
