--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "alert-node": "^3.0.9",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.9.4",
+    "passport": "^0.4.1",
     "shortid": "^2.2.15"
   }
 }
